[package]
name = "urlprobe"
version = "0.4.0"
authors = ["eikendev"]
edition = "2018"
description = "A tool for probing URLs for their status code"
homepage = "https://github.com/eikendev/urlprobe"
repository = "https://github.com/eikendev/urlprobe.git"
readme = "README.md"
license = "ISC"

[dependencies]
futures = ">=0.3.8"
http = ">=0.2.1"
reqwest = ">=0.11"
human-panic = "1.0.3"
argh = "0.1.4"
anyhow = "1.0.41"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
